updated the files

--- a/footer.html
+++ b/footer.html
@@ -1,14 +1,13 @@
-<div class="banner">
-  <div class="banner-table flex-column">
-    <div class="flex-row">
-      <div class="flex-item flex-column">
-        <h2>This is the footer area</h2>
-        <p class="text add-bottom-margin-large">
-          Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-          augue. <a href="javascript:void(0)">Curabitur ullamcorper ultricies nisi</a>. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-          condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
-          vel, luctus pulvinar, hendrerit id, lorem.
-        </p>
+<div class="footer-container">
+  <div class="banner">
+    <div class="banner-table flex-column">
+      <div class="flex-row">
+        <div class="flex-item flex-column">
+          <h2>Blind Aid Project</h2>
+          <p class="text add-bottom-margin-large">
+            Developed by Kawuma Rodney, Twebaza Rodlin, Muganzi Baker Kasirye, Mukisa Mark, and Kyomuhendo Sumayah at Makerere University. Contact us at <a href="mailto:blindaid@mak.ac.ug" aria-label="Email the Blind Aid team">blindaid@mak.ac.ug</a>. Visit our project repository for more details: <a href="https://github.com/CS-GROUP39/blind_aid" aria-label="Visit Blind Aid project repository">Blind Aid Repository</a>. Follow us on <a href="https://x.com" aria-label="Follow Blind Aid on X">X</a> for updates. © 2025 Blind Aid Team, Makerere University.
+          </p>
+        </div>
       </div>
     </div>
   </div>
