removed some images

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="flex-row">
           <div class="flex-item flex-column">
             <!-- Add your image here: Replace 'dummy-img.png' with a project-specific image (e.g., 'img/team-photo.jpg' or 'img/device-overview.jpg'). Place the image in the 'img/' directory or use a GitHub URL. Update the alt attribute to describe the image. -->
-            <img class="image center" src="img/dummy-img.png" alt="Placeholder image for Blind Aid project">
+            <img class="image center"  alt="Placeholder image for Blind Aid project">
             
           </div>
           <div class="flex-item flex-column">
