--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <script src="js/menu.js"></script>
   <script src="js/footer.js"></script>
   <style>
+    body {
+      font-size:xx-large;
+    }
     .menu-index {
       color: rgb(255, 255, 255) !important;
       opacity: 1 !important;
@@ -51,7 +54,7 @@
         <div class="flex-row">
           <div class="flex-item flex-column">
             <h2 class="add-top-margin-small">Blind Aid</h2>
-            <p class="text">
+            <p >
               A wearable device designed to assist the visually impaired individuals in navigating their surroundings safely using real-time sensor feedback and haptic alert queues.
             </p>
           </div>
@@ -95,7 +98,7 @@
         <div class="flex-row">
           <div class="flex-item flex-column">
             <!-- Add your image here: Replace 'dummy-img.png' with a project-specific image (e.g., 'img/team-photo.jpg' or 'img/device-overview.jpg'). Place the image in the 'img/' directory or use a GitHub URL. Update the alt attribute to describe the image. -->
-            <img class="image center"  alt="Placeholder image for Blind Aid project">
+            <!-- <img class="image center"  alt="Placeholder image for Blind Aid project"> -->
             
           </div>
           <div class="flex-item flex-column">
@@ -113,7 +116,7 @@
         <div class="flex-row">
           <div class="flex-item flex-column">
             <p class="text add-top-margin">
-              The Blind Aid is a wearable device designed to enhance mobility for visually impaired individuals. It uses a combination of sensors (HC-SR04, VL53L0X, MPU6050) and artificial intelligence to detect obstacles, changes in terrain, and falls, providing real-time audio and haptic feedback. Powered by a 2000mAh Li-Po battery, it ensures portability and efficiency. Our goal is to make navigation safer and more intuitive, reducing inconvenience for users.
+              The Blind Aid is a wearable device designed to enhance mobility for visually impaired individuals. It uses a combination of sensors (HC-SR04, VL53L0X, MPU6050) to detect obstacles, changes in terrain, and falls, providing real-time haptic feedback. Powered by a 2000mAh Lithium ion battery, it ensures portability and efficiency. Our goal is to make navigation safer and more intuitive, reducing inconvenience for our users.
             </p>
           </div>
         </div>
@@ -185,8 +188,9 @@
       </ul>
       <h2>Route Tracing Example</h2>
       <p>
-        Here is visualization of 
+        To give more context to the last concept stated above, below is a visualization of what we intend to do with the GPS, speed and gyroscope data collected from the device. This opens up new possibilities for fields such as forensics and data science
       </p>
+      <img class="image center" src="/img/routetrace2.jpg">
     </div>
 
   </div>
