--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <h2>SYSTEM OVERVIEW</h2>
       <hr>
-      <img class="image center" src="/img/schematic.png"></img>
+      <img class="image center" src="https://github.com/call-me-rodney/project-website-template/blob/0d32cd135b03318e5eac504736fa031308a703eb/img/schematic.png"></img>
       <h3>Core Components</h3>
       <p>
         A few key componebts that make up our system include:
