--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <p>
         To give more context to the last concept stated above, below is a visualization of what we intend to do with the GPS, speed and gyroscope data collected from the device. This opens up new possibilities for fields such as forensics and data science
       </p>
-      <img class="image center" src="/img/routetrace2.jpg">
+      <img class="image center" src="https://github.com/call-me-rodney/project-website-template/blob/069bc910d6e6b68cddf53d850f7314856ffb3dba/img/routetrace2.jpg">
     </div>
 
   </div>
